Preventing horizontal scroll
Not sure why this happens (has to do with the jumbo background image on the splashpage) but it's been freaking me out ;-)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,7 @@
 
 body {
   margin: 0;
+  overflow-x:hidden;
 }
 
 .constrained {
